@@ -1,3 +1,7 @@
+Sun Dec 14 21:04:56 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* test: test alloca more.
+
 Sun Dec 14 20:43:47 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/CodeGenerator.java
